--- a/css/Contacto.css
+++ b/css/Contacto.css
@@ -28,12 +28,35 @@ body{
 }
 .formulario__input{
     padding: 20px;
+    background: rgba(0, 0, 0, 0.2);
     border: 1px solid rgba(6, 7, 2, 0.3);
     margin-bottom: 40px;
 }
+.formulario__input:focus{
+    outline: 1px solid rgba(0, 0, 0, 0.7);
+
+}
+.formulario__input:focus +
+.formulario__label{
+    margin-top: -140px;
+
+}
+
 .formulario__label{
     padding-left: 15px;
     position: absolute;
     margin-top: -85px;
-
+    z-index: -20;
+    color: rgba(0, 0, 0, 0.5);
+    transition: all 0.5s;
+}
+.formulario__submit{
+    background: rgba(0, 0, 0, 0.7);
+    color: blue;
+    padding: 10PX 20px;
+    cursor: pointer;
+    border-radius: 1%;
+}
+.fijar{
+    margin-top: -140px;
 }
