--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ h1
         text-align: center;
         color:rgb(243, 205, 36);
         font-size: 25px;
+        margin-top: 0px;
     }
 .formulario3    
     {
