--- a/css/Contacto.css
+++ b/css/Contacto.css
@@ -5,53 +5,54 @@ body{
     margin: 0;
     font-family: sans-serif;
 }
-.formulario{
-    width: 500px;
+.forma{
+    width: 800px;
     max-width: 100%;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 8px;
     padding: 20px;
-    box-shadow: 0 0 20px 1 px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 20px 1 px rgba(32, 12, 87, 0.5);
     position: relative;
 }
-.formulario__titulo{
+.forma__titulo{
     text-align: center;
     margin-top: 0;
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(243, 205, 36, 0.7);
 }
-.formulario__input,
-.formulario__label,
-.formulario__submit{
+.forma__input,
+.forma__label
+/*.forma__submit*/{
     display: block;
     width: 100%;
     font-size: 1.3em;
+    text-align: left;
 }
-.formulario__input{
+.forma__input{
     padding: 20px;
-    background: rgba(0, 0, 0, 0.2);
+    background: #f38d084d;
     border: 1px solid rgba(6, 7, 2, 0.3);
     margin-bottom: 40px;
 }
-.formulario__input:focus{
+.forma__input:focus{
     outline: 1px solid rgba(0, 0, 0, 0.7);
+    background: rgba(245, 143,10, 0.6);   
 
 }
-.formulario__input:focus +
-.formulario__label{
+.forma__input:focus +
+.forma__label{
     margin-top: -140px;
 
 }
-
-.formulario__label{
+.forma__label{
     padding-left: 15px;
     position: absolute;
     margin-top: -85px;
     z-index: -20;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgb(255, 255, 255);
     transition: all 0.5s;
 }
-.formulario__submit{
-    background: rgba(0, 0, 0, 0.7);
+.forma__submit{
+    background: rgba(245, 143, 10, 0.7);
     color: blue;
     padding: 10PX 20px;
     cursor: pointer;
