--- a/css/Contacto.css
+++ b/css/Contacto.css
@@ -1,10 +1,11 @@
+/*
 *{
     box-sizing: border-box;
 }
 body{
     margin: 0;
     font-family: sans-serif;
-}
+}*/
 .forma{
     width: 800px;
     max-width: 100%;
