--- a/css/Contacto.css
+++ b/css/Contacto.css
@@ -21,6 +21,7 @@ body{
     color: rgba(243, 205, 36, 0.7);
 }
 .forma__input,
+.forma__inputR,
 .forma__label
 /*.forma__submit*/{
     display: block;
@@ -28,11 +29,18 @@ body{
     font-size: 1.3em;
     text-align: left;
 }
-.forma__input{
+.forma__input,
+.forma__inputR{
     padding: 20px;
     background: #f38d084d;
     border: 1px solid rgba(6, 7, 2, 0.3);
     margin-bottom: 40px;
+    
+}
+.forma__inputR{
+    direction: rtl;
+    unicode-bidi: bidi-override;
+    
 }
 .forma__input:focus{
     outline: 1px solid rgba(0, 0, 0, 0.7);
@@ -50,8 +58,9 @@ body{
     margin-top: -85px;
     z-index: -20;
     color: rgb(255, 255, 255);
-    transition: all 0.5s;
+    transition: all 0.3s;
 }
+
 .forma__submit{
     background: rgba(245, 143, 10, 0.7);
     color: blue;
