--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ p{
 .encabezado
     {
         background: rgba(0,0,0,.6);
-       
+        /*background: rgba(38, 192, 219, 0.6);*/
     }
 .encabezado .menu
     {
