--- a/css/style1.css
+++ b/css/style1.css
@@ -2,7 +2,7 @@
     width: 100%;
     background-color:rgba(255,255,255,0.8);
     height: 60px;
-    position: fixed;/*fija el encabezaso*/
+    position: fixed;/*fija el encabezado*/
     top: 0;
     left: 0;
     z-index: 1;
@@ -28,7 +28,7 @@ font-weight: 500;
   margin-left: 20px;
   line-height: 60px;
 }
-.web{
+.web98
     font-size: 20px;
     font-weight: 600;
     margin-left: 0px;
@@ -122,7 +122,7 @@ font-weight: 500;
 .contiene1 .contiene_alta{
     background-color:green;
     display: flex;
-    width: 94%;
+    width: 99%;
     height: 260px;
     border-radius: 6px;
     position: relative;
@@ -165,7 +165,7 @@ font-weight: 500;
 .contiene1 .contiene_alta .rubro_input{
     background-color: blue;
     display: inline-flex;
-    width: 130px;
+    width: 190px;
     height: 30px;
     position: relative;
     align-items: center;
@@ -199,7 +199,7 @@ font-weight: 500;
 .contiene1 .contiene_alta .nombre_input{
     background-color: pink;
     display: inline-flex;
-    width: 550px;
+    width: 190px;
     height: 30px;
     position: relative;
     align-items: center;
@@ -210,7 +210,7 @@ font-weight: 500;
 .contiene1 .nombre{
     background-color: white;
     display: inline-flex;
-    width: 200px;
+    width: 98px;
     height: 20px;
     position: relative;
     align-items: center;
@@ -219,6 +219,76 @@ font-weight: 500;
     justify-content: left;
 }
 .contiene1 .label_nombre{
+    background-color: grey;
+    background-color: transparent;
+    display: inline-flex;
+    width: 60px;
+    height: 20px;
+    border: 1px solid black;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .contiene_alta .marca_input{
+    background-color: cyan;
+    display: inline-flex;
+    width: 190px;
+    height: 30px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .marca{
+    background-color: white;
+    display: inline-flex;
+    width: 98px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .label_marca{
+    background-color: grey;
+    background-color: transparent;
+    display: inline-flex;
+    width: 80px;
+    height: 20px;
+    border: 2px solid black;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .contiene_alta .origen_input{
+    background-color: yellow;
+    display: inline-flex;
+    width: 190px;
+    height: 30px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .origen{
+    background-color: white;
+    display: inline-flex;
+    width: 98px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .label_origen{
     background-color: grey;
     background-color: transparent;
     display: inline-flex;
@@ -234,19 +304,19 @@ font-weight: 500;
 .contiene1 .contiene_alta .descripcion_input{
     background-color: white;
     display: block;
-    width: 550px;
+    width: 855px;
     height: 30px;
-    position: relative;
+    position: absolute;
     align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
+    margin-top: 40px;
+    margin-right: 5px;
+    justify-content: right;
 
 }
 .contiene1 .descripcion{
     background-color: white;
     display: inline-flex;
-    width: 435px;
+    width: 743px;
     height: 20px;
     position: absolute;
     align-items: center;
@@ -266,6 +336,81 @@ font-weight: 500;
     margin-left: 5px;
     justify-content: left;
 }
+.contiene1 .contiene_alta .prevta_input{
+    background-color: yellowgreen;
+    display: block;
+    width: 190px;
+    height: 30px;
+    position: absolute;
+    align-items: center;
+    /* margin-top: 70px;
+    margin-right: 5px; */
+    top: 75px;
+    left: 5px;
+    justify-content: right;  
+}
+.contiene1 .prevta{
+    background-color: white;
+    display: inline-flex;
+    width: 98px;
+    height: 20px;
+    position: absolute;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .label_prevta{
+    background-color: grey;
+    /* background-color: transparent; */
+    display: inline-flex;
+    width: 80px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+    font-size: 10px;
+}
+.contiene1 .contiene_alta .precto_input{
+    background-color: magenta;
+    display: inline-flex;
+    width: 190px;
+    height: 30px;
+    position: absolute;
+    align-items: center;
+    /* margin-top: 70px;
+    margin-left: 5px; */
+    top: 75px;
+    left: 200px;
+    justify-content: center;
+}
+.contiene1 .precto{
+    background-color: white;
+    display: inline-flex;
+    width: 70px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+.contiene1 .label_precto{
+    background-color: grey;
+    background-color: transparent;
+    display: inline-flex;
+    width: 80px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+    font-size: 10px;
+}
+
 /*-----------------------------------------------------------------------------*/
 
 
