--- a/css/style1.css
+++ b/css/style1.css
@@ -128,97 +128,20 @@ font-weight: 500;
     position: relative;
     margin-left: 5px;
 }
-.contiene1 .contiene_alta .codigo_input{
+.contiene1 .contiene_alta .codigo_input{/*este es el div*/
     background-color: grey;
     display: inline-flex;
-    width: 130px;
-    height: 30px;
-    position: relative;
+    width: 140px;
+    height: 40px;
+    position: absolute;
     align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
+    top: 5px;
+    left: 5px;
     justify-content: center;
+    place-content: center;
+    border: 1px solid black;
 }
-.contiene1 .codigo{
-    background-color: white;
-    display: inline-flex;
-    width: 70px;
-    height: 20px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
-}
-.contiene1 .label_codigo{
-    background-color: grey;
-    background-color: transparent;
-    display: inline-flex;
-    width: 100px;
-    height: 20px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
-}
-.contiene1 .contiene_alta .rubro_input{
-    background-color: blue;
-    display: inline-flex;
-    width: 190px;
-    height: 30px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: center;
-}
-.contiene1 .rubro{
-    background-color: white;
-    display: inline-flex;
-    width: 70px;
-    height: 20px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
-}
-.contiene1 .label_rubro{
-    background-color: grey;
-    background-color: transparent;
-    display: inline-flex;
-    width: 100px;
-    height: 20px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
-}
-.contiene1 .contiene_alta .nombre_input{
-    background-color: pink;
-    display: inline-flex;
-    width: 190px;
-    height: 30px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
-}
-.contiene1 .nombre{
-    background-color: white;
-    display: inline-flex;
-    width: 98px;
-    height: 20px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
-}
-.contiene1 .label_nombre{
+.contiene1 .label_codigo{/*label*/
     background-color: grey;
     background-color: transparent;
     display: inline-flex;
@@ -227,11 +150,95 @@ font-weight: 500;
     border: 1px solid black;
     position: relative;
     align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
     justify-content: left;
 }
-.contiene1 .contiene_alta .marca_input{
+.contiene1 .codigo{/*input*/
+    background-color: white;
+    display: inline-flex;
+    width: 70px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    justify-content: left;
+    border: 1px solid black;
+    float: left;
+}
+
+.contiene1 .contiene_alta .rubro_input{/*este es el div de*/
+    background-color: coral;
+    display: inline-flex;
+    width: 210px;
+    height: 40px;
+    top:5px;
+    left: 150px;    
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    place-content: center;
+    border: 1px solid black;
+}
+
+.contiene1 .label_rubro{/*label*/
+    background-color: grey;
+    background-color: transparent;
+    display: inline-flex;
+    width: 60px;
+    height: 20px;
+    border: 1px solid black;
+    position: relative;
+    align-items: center;
+    justify-content: left;
+}
+
+.contiene1 .rubro{/*este es el input*/
+    background-color: white;
+    display: inline-flex;
+    width: 140px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    justify-content: left;
+    border: 1px solid black;
+    float: left;
+}
+.contiene1 .contiene_alta .nombre_input{/*div*/
+    background-color: pink;
+    display: inline-flex;
+    width: 210px;
+    height: 40px;
+    top: 5px;
+    left: 365px; 
+    position: absolute;
+    align-items: center;
+    justify-content: left;
+    place-content: center;
+    border: 1px solid black
+}
+.contiene1 .label_nombre{/*label*/
+    background-color: grey;
+    background-color: transparent;
+    display: inline-flex;
+    width: 60px;
+    height: 20px;
+    border: 1px solid black;
+    position: relative;
+    align-items: center;
+    justify-content: left;
+}
+
+.contiene1 .nombre{/*input*/
+    background-color: white;
+    display: inline-flex;
+    width: 140px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    justify-content: left;
+    border: 1px solid black;
+    float: left;
+}
+
+/*.contiene1 .contiene_alta .marca_input{
     background-color: cyan;
     display: inline-flex;
     width: 190px;
@@ -326,7 +333,7 @@ font-weight: 500;
 }
 .contiene1 .label_descripcion{
     background-color: grey;
-    /* background-color: transparent; */
+    
     display: inline-flex;
     width: 100px;
     height: 20px;
@@ -345,7 +352,7 @@ font-weight: 500;
     align-items: center;
     /* margin-top: 70px;
     margin-right: 5px; */
-    top: 75px;
+    /*top: 75px;
     left: 5px;
     justify-content: right;  
 }
@@ -363,7 +370,7 @@ font-weight: 500;
 .contiene1 .label_prevta{
     background-color: grey;
     /* background-color: transparent; */
-    display: inline-flex;
+    /*display: inline-flex;
     width: 80px;
     height: 20px;
     position: relative;
@@ -382,7 +389,7 @@ font-weight: 500;
     align-items: center;
     /* margin-top: 70px;
     margin-left: 5px; */
-    top: 75px;
+    /*top: 75px;
     left: 200px;
     justify-content: center;
 }
