--- a/css/style1.css
+++ b/css/style1.css
@@ -315,9 +315,9 @@ font-weight: 500;
 }
 
 .contiene1 .contiene_alta .descripcion_input{/*div*/
-    background-color: white;
+    background-color: red;
     display: block;
-    width: 855px;
+    width: 360px;
     height: 40px;
     position: absolute;
     top: 50px;
@@ -331,19 +331,22 @@ font-weight: 500;
 }
 .contiene1 .label_descripcion{/*label*/
     background-color: grey;
-    
+    /*background-color: transparent;*/
     display: inline-flex;
     width: 100px;
     height: 20px;
     position: relative;
     align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
+    top: 10px;
+    left: 5px;
+    /*margin-top: 5px;
+    margin-left: 5px;*/
     justify-content: left;
+    border: 1px solid black;
 }
 
 .contiene1 .descripcion{/*input*/
-    background-color: white;
+    background-color: rgb(25, 173, 112);
     display: inline-flex;
     width: 743px;
     height: 20px;
@@ -353,18 +356,24 @@ font-weight: 500;
     margin-left: 5px;
     justify-content: left;
 }
-
-/*.contiene1 .contiene_alta .prevta_input{
+.textarea{
+        resize: none;
+        overflow: scroll;
+        top: 40px;
+        display: block;
+        position: absolute;
+}        
+.contiene1 .contiene_alta .prevta_input{
     background-color: yellowgreen;
     display: block;
-    width: 190px;
-    height: 30px;
+    width: 210px;
+    height: 40px;
     position: absolute;
     align-items: center;
     /* margin-top: 70px;
     margin-right: 5px; */
-    /*top: 75px;
-    left: 5px;
+    top: 50px;
+    left: 365px;
     justify-content: right;  
 }
 .contiene1 .prevta{
@@ -381,7 +390,7 @@ font-weight: 500;
 .contiene1 .label_prevta{
     background-color: grey;
     /* background-color: transparent; */
-    /*display: inline-flex;
+    display: inline-flex;
     width: 80px;
     height: 20px;
     position: relative;
@@ -394,26 +403,15 @@ font-weight: 500;
 .contiene1 .contiene_alta .precto_input{
     background-color: magenta;
     display: inline-flex;
-    width: 190px;
-    height: 30px;
+    width: 210px;
+    height: 40px;
     position: absolute;
     align-items: center;
     /* margin-top: 70px;
     margin-left: 5px; */
-    /*top: 75px;
-    left: 200px;
+    top: 95px;
+    left: 365px;
     justify-content: center;
-}
-.contiene1 .precto{
-    background-color: white;
-    display: inline-flex;
-    width: 70px;
-    height: 20px;
-    position: relative;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 5px;
-    justify-content: left;
 }
 .contiene1 .label_precto{
     background-color: grey;
@@ -428,6 +426,18 @@ font-weight: 500;
     justify-content: left;
     font-size: 10px;
 }
+.contiene1 .precto{
+    background-color: white;
+    display: inline-flex;
+    width: 98px;
+    height: 20px;
+    position: relative;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 5px;
+    justify-content: left;
+}
+
 
 /*-----------------------------------------------------------------------------*/
 
